--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1754,5 +1754,108 @@ stories:
   state: South Dakota
   domain: http://www.thepublicopinion.com/
   link: https://www.thepublicopinion.com/ap/politics/trump-warns-of-carnage-in-rebel-stronghold-in-syria/article_d86419bb-ef58-5586-9866-68b11f866bd4.html
+images:
+- name: stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+- name: aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: aws-s3-models-dali1.t7
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-models-dali1.t7
+- name: old-house-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-far-away.jpg
+- name: old-cabin-oldcabin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-mucha-mult.jpg
+- name: stalin-time-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-press-room-flag.jpg
+- name: border-crossing-bordercrossing-really-hot.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-really-hot.png
+- name: ellis-island-ellisisland-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
+- name: dc-statue-dcstatue-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-diego-rivera1.jpg
+- name: adam-smith-adam-smith-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purp-paper.jpg
+- name: carry-load-carryload-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-spagetti-accident.jpg
+- name: victoria-victoria-corner-hotel-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-aqua.jpg
+- name: udnie-IMG_8358.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
+- name: fence-mexico-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
+- name: liberty-back-statue-liberty-back-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purp-paper.jpg
+- name: stalin-time-train-subway-125th-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-subway-125th-down-the-line.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+- name: dragon-desert-desert-dragon-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colorful-blocks.jpg
+- name: border-crossing-bordercrossing-wols.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-wols.png
+- name: crow_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
+- name: nazi-invasion-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-seattle-clouds.jpg
+- name: stories-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-border-traffic.jpg
+- name: old-granary-field-oldhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-space-pizza.jpg
+- name: trucksilo-trucksilo-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
+- name: docks-docks-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
+- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
+- name: power-lines-power-lines-empty-space-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
+- name: subway-subway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crabapple.jpg
+- name: powerlines-power-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colorful-dream.jpg
+- name: walled-garden-walled-garden-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-missle.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
+- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
+- name: nazi-invasion-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-mirrors-hotel.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+- name: dc-statue-dcstatue-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purp-paper.jpg
+- name: windowmountain-window-mountain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-soul.jpg
+- name: server-cloud-server-racks-clouds-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-matrix.jpg
+- name: braceros-domingo-ulloa-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-skyline.jpg
+- name: lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+- name: miamibeach-miamibeach-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-nazi-poster.jpg
+- name: copper-circuit-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-firetruck-bright-sun.jpg
+- name: braceros-domingo-ulloa-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-lincoln-memorial_36690528196_o.jpg
+- name: downtheline-downtheline-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-storm.jpg
+- name: old-barn-old-barn-1500-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-granite.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: oldhousecars-house-old-cars-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-yellow-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-alberto-giacometti.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
 ---
 Outside Linebackers Tyler Johnson, Christian Bell Become Factors In Limited Appearances.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;The Ongoing Saga Of A Girl And Her Scale.&nbsp;Lincoln Park Exchange Club Continues Tradition Of Christmas Giving.&nbsp;The Staff Of The Half Moon Bay Review.&nbsp;Expert Offers Advice For Beating The 'holiday Blues'.&nbsp;Israeli Lawmaker Aims To Oust Netanyahu In Likud Primary.&nbsp;Trains Of Christmas A Great Family Activity.&nbsp;
